--- a/src/vboa/templates/eboa_nav/query_annotation_cnfs_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotation_cnfs_content.html
@@ -7,13 +7,13 @@
             <div>
               <div class="row  query-annotation-cnfs">
                 <div class="col-xs-3 query-annotation-names">
-                  <label>Annotation name like</label>
+                  <label>Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                   <input class="form-control" list="annotation_name_like_annotation_cnfs" name="annotation_name_like"/>
                   <datalist id="annotation_name_like_annotation_cnfs">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-annotation-systems">
-                  <label>Annotation system like</label>
+                  <label>Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                   <input class="form-control" list="annotation_system_like_annotation_cnfs" name="annotation_system_like"/>
                   <datalist id="annotation_system_like_annotation_cnfs">
                   </datalist>
@@ -21,12 +21,12 @@
               </div>
               <div class="row query-annotation-cnfs">
                 <div class="col-xs-3 query-annotation-names">
-                  <label>Annotation names</label>
+                  <label>Annotation names (<input type="checkbox" name="annotation_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                   <select name="annotation_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                   </select>
                 </div>
                 <div class="col-xs-3 query-annotation-systems">
-                  <label>Annotation systems</label>
+                  <label>Annotation systems (<input type="checkbox" name="annotation_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                   <select name="annotation_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                   </select>
                 </div>
@@ -34,13 +34,13 @@
             </div>
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signature like</label>
+                <label>DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                 <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like"/>
                 <datalist id="dim_signature_like_sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signatures</label>
+                <label>DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                 <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                 </select>
               </div>
