--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -7,13 +7,13 @@
             <!-- Sources -->
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
-                <label>Source like</label>
+                <label>Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                 <input class="form-control" list="source_like_annotations" name="source_like"/>
                 <datalist id="source_like_annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-names">
-                <label>Sources</label>
+                <label>Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                 <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                 </select>
               </div>
@@ -21,13 +21,13 @@
             <!-- Exlicit references -->
             <div class="row">
               <div class="col-xs-3 query-ers">
-                <label>Explicit reference like</label>
+                <label>Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                 <input class="form-control" list="er_like_annotations" name="er_like"/>
                 <datalist id="er_like_annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-ers">
-                <label>Explicit references</label>
+                <label>Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                 <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                 </select>
               </div>
@@ -36,13 +36,13 @@
             <div>
               <div class="row  query-annotation-cnfs">
                 <div class="col-xs-3 query-annotation-names">
-                  <label>Annotation name like</label>
+                  <label>Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                   <input class="form-control" list="annotation_name_like_annotations" name="annotation_name_like"/>
                   <datalist id="annotation_name_like_annotations">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-annotation-systems">
-                  <label>Annotation system like</label>
+                  <label>Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                   <input class="form-control" list="annotation_system_like_annotations" name="annotation_system_like"/>
                   <datalist id="annotation_system_like_annotations">
                   </datalist>
@@ -50,12 +50,12 @@
               </div>
               <div class="row query-annotation-cnfs">
                 <div class="col-xs-3 query-annotation-names">
-                  <label>Annotation names</label>
+                  <label>Annotation names (<input type="checkbox" name="annotation_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                   <select name="annotation_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                   </select>
                 </div>
                 <div class="col-xs-3 query-annotation-systems">
-                  <label>Annotation systems</label>
+                  <label>Annotation systems (<input type="checkbox" name="annotation_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                   <select name="annotation_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                   </select>
                 </div>
