--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -75,6 +75,36 @@
                 </div>
               </div>
             </div>
+            <!-- Values -->
+            <div class="row">
+              <div class="col-xs-3">
+                  <label>Value type</label>
+                  <select style="width: 100%" name="value_type">
+                    <option>text</option>
+                    <option>timestamp</option>
+                    <option>boolean</option>
+                    <option>double</option>
+                    <option>geometry</option>
+                    <option>object</option>
+                  </select>
+              </div>
+              <div class="col-xs-3 query-event-values">
+                <label>Value name like</label>
+                <input class="form-control" list="value_name_like_events" name="value_name_like"/>
+                <datalist id="value_name_like_events">
+                </datalist>
+              </div>
+              <div class="col-xs-3">
+                <label>Value</label>
+                <div class="input-group" style="width: 100%">
+                  <input type="text" class="form-control" style="width: 80%" name="value"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="value_operator">
+                    {% include "eboa_nav/operators.html" %}
+                  </select>
+                </div>
+              </div>
+            </div>
+            <!-- Start and stop -->
             <div class="row">
               {% include "eboa_nav/start_stop.html" %}
               <div>
@@ -93,6 +123,7 @@
                 </span>
               </div>
             </div>
+            <!-- Ingestion time -->
             <div id="more-ingestion-time-query-events">
             </div>
             <div>
