--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -4,6 +4,14 @@
   height: 600px;
 }
 
+i.red {
+  color: red;
+}
+
+i.green {
+  color: green;
+}
+
 /* Draaggable div */
 .draggable-div {
     position: absolute;
