Fix source UUID

--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -36,7 +36,7 @@
           <td>{{ source.dimSignature.dim_signature }}</td>
           <td>{{ source.processor }}</td>
           <td>{{ source.processor_version }}</td>
-          <td>{{ source.processing_uuid }}</td>
+          <td>{{ source.source_uuid }}</td>
         </tr>
         {% endfor %}
       </tbody>
