Correct identifiers of HTML elements

--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -29,7 +29,7 @@
       <tbody>
         {% for event in events %}
         <tr>
-          <td><i id="expand-values-{{ event.event_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_event_values('expand-values-{{ event.event_uuid }}', '{{ event.event_uuid }}')" data-toggle="tooltip" title="Click to show the related values"></i></td>
+          <td><i id="expand-values-event-{{ event.event_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_event_values('expand-values-event-{{ event.event_uuid }}', '{{ event.event_uuid }}')" data-toggle="tooltip" title="Click to show the related values"></i></td>
           <td>{{ event.gauge.name }}</td>
           <td>{{ event.gauge.system }}</td>
           <td>{{ event.start }}</td>
