--- a/src/vboa/templates/eboa_nav/linked_events_nav.html
+++ b/src/vboa/templates/eboa_nav/linked_events_nav.html
@@ -14,6 +14,7 @@
     <table width="100%" class="table table-striped table-bordered table-hover" id="events">
       <thead>
         <tr>
+          <th></th>
           <th>Description</th>
           <th>Gauge name</th>
           <th>Gauge system</th>
@@ -42,6 +43,9 @@
           {% endif %}
           {% endif %}
           <td>
+            <i id="expand-values-linked-event-{{ event.event_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_event_values('expand-values-linked-event-{{ event.event_uuid }}', '{{ event.event_uuid }}')" data-toggle="tooltip" title="Click to show the related values"></i>
+          </td>
+          <td>
             {{ description }}
           </td>
           <td>{{ event.gauge.name }}</td>
@@ -49,7 +53,7 @@
           <td>{{ event.start }}</td>
           <td>{{ event.stop }}</td>
           <td>{{ event.ingestion_time }}</td>
-          {% set source_uuid = event.source.processing_uuid %}
+          {% set source_uuid = event.source.source_uuid %}
           <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ event.source.name }}</a></td>
           <td>
             {% set er = "" %}
@@ -66,6 +70,7 @@
       </tbody>
       <tfoot>
         <tr>
+          <th></th>
           <th>Description</th>
           <th>Gauge name</th>
           <th>Gauge system</th>
