--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -74,11 +74,15 @@
                     <option>object</option>
                   </select>
               </div>
-              <div class="col-xs-3 query-annotation-value-names">
-                <label>Value name like</label>
-                <input class="form-control" list="value_name_like_annotations" name="value_name_like"/>
-                <datalist id="value_name_like_annotations">
-                </datalist>
+              <div class="col-xs-3">
+                <label>Value name</label>
+                <div class="input-group" style="width: 100%">
+                  <input class="form-control" style="width: 80%" name="value_name_like"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="value_name_like_op">
+                    <option>like</option>
+                    <option>notlike</option>
+                  </select>
+                </div>
               </div>
               <div class="col-xs-3">
                 <label>Value</label>
@@ -101,12 +105,12 @@
             <div class="row">
               {% include "eboa_nav/ingestion_time.html" %}
               <div>
-                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-events')">
+                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-annotations')">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
-            <div id="more-ingestion-time-query-events">
+            <div id="more-ingestion-time-query-annotations">
             </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
