--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -46,6 +46,11 @@
               </div>
             </div>
             <div>
+              <label>
+                <input type="checkbox" name="show_network"><span class="label-text"><b>Show network of gauges</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
