Set width to 100% for the columns of the tooltips

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -44,6 +44,10 @@ i.green {
     float: left;
 }
 
+.draggable-div-body td {
+    width: 100%;
+}
+
 /*Check box*/
 
 input[type="checkbox"], input[type="radio"]{
