Correct gauge system filters

--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -56,7 +56,7 @@
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge system like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <label>Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
                   <input class="form-control" list="gauge_system_like_events" name="gauge_system_like"/>
                   <datalist id="gauge_system_like_events">
                   </datalist>
@@ -69,7 +69,7 @@
                   </select>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge systems (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <label>Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                   <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
                   </select>
                 </div>
