--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -113,6 +113,11 @@
             <div id="more-ingestion-time-query-annotations">
             </div>
             <div>
+              <label>
+                <input type="checkbox" name="show_map"><span class="label-text"><b>Show map</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
             </div>
           </form>
