Add support for side navigation pluggins
Add side navigation menu treatment

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -61,6 +61,7 @@
               <li>
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
+              {% block side_panel_plugins %}{% endblock %}
             </ul>
           </div>
           <!-- /.sidebar-collapse -->
