--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -11,7 +11,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover" id="annotations">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotations">
       <thead>
         <tr>
           <th></th>
