--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -13,7 +13,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover" id="sources">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources">
       <thead>
         <tr>
           <th>Name</th>
@@ -64,7 +64,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover" id="sources">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources">
       <thead>
         <tr>
           <th>Name</th>
