Add filter by validity period duration in the query interface for sources
Add column duration in the tables of the sources

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -53,6 +53,18 @@
             </div>
             <div id="more-validity-start-validity-stop-query-sources">
             </div>
+            <!-- Validity duration -->
+            <div class="row">
+              {% include "eboa_nav/source_validity_duration.html" %}
+              <div>
+                <span onclick="vboa.add_source_validity_duration('more-source-validity-duration-query-sources')">
+                  <span class="glyphicon glyphicon-plus"></span>
+                </span>
+              </div>
+            </div>
+            <div id="more-source-validity-duration-query-sources">
+            </div>
+            <!-- Ingestion time -->
             <div class="row">
               {% include "eboa_nav/ingestion_time.html" %}
               <div>
